--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Servicio de Salud Los Ríos</p>
+    <p>© 2025 Servicio de Salud Los Ríos - Unidad de Atracción y Selección del Talento</p>
   </footer>
 
 </body>
